# llm-toolbox

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
.github/workflows/: release.yml
html/static/css/: style.css
html/static/js/: app.js
html/templates/: index.html  login.html
llm/: __init__.py  base.py  ollama_client.py  openai_client.py
