[project]
name = "llm-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic>=2.0.0",
    "jinja2>=3.1.2",
    "requests>=2.33.0",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0"
]
